--- a/api/.gitignore
+++ b/api/.gitignore
@@ -33,7 +33,7 @@ build/
 .vscode/
 
 ### Maven Wrapper ###
-!mvnw
-!mvnw.cmd
-!.mvn/wrapper/maven-wrapper.jar
+mvnw
+mvnw.cmd
+.mvn/
 !.mvn/wrapper/maven-wrapper.properties
