--- a/api/.gitignore
+++ b/api/.gitignore
@@ -1,23 +1,36 @@
-HELP.md
+### Build ###
 target/
-.mvn/wrapper/maven-wrapper.jar
-!**/src/main/**/target/
-!**/src/test/**/target/
+build/
+out/
 
-### STS ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
+### Maven Wrapper (ignored) ###
+mvnw
+mvnw.cmd
+.mvn/
+
+### Logs ###
+*.log
+*.out
+*.err
+
+### System files ###
+.DS_Store
+Thumbs.db
 
 ### IntelliJ IDEA ###
-.idea
+.idea/
 *.iws
 *.iml
 *.ipr
+
+### Eclipse / STS ###
+.apt_generated/
+.classpath
+.factorypath
+.project
+.settings/
+.springBeans
+.sts4-cache
 
 ### NetBeans ###
 /nbproject/private/
@@ -25,15 +38,21 @@ target/
 /dist/
 /nbdist/
 /.nb-gradle/
-build/
-!**/src/main/**/build/
-!**/src/test/**/build/
 
 ### VS Code ###
 .vscode/
 
-### Maven Wrapper ###
-mvnw
-mvnw.cmd
-.mvn/
-!.mvn/wrapper/maven-wrapper.properties
+### OS-specific ###
+ehthumbs.db
+Icon?
+Desktop.ini
+
+### Git ###
+.gitignore
+.gitattributes
+
+### Optional — docs or temp files ###
+HELP.md
+*.tmp
+*.bak
+*.swp
