feat: little changes on the form builder api

--- a/form-builder-api/pom.xml
+++ b/form-builder-api/pom.xml
@@ -12,7 +12,7 @@
     </parent>
 
     <groupId>fr.form-builder</groupId>
-    <artifactId>api</artifactId>
+    <artifactId>form-builder-api</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>api</name>
     <description>api</description>
